修正tag无法正确赋值的问题